# lib_shopware6_api

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.rst  README.md  README.rst  example.env  lib_shopware6_api.ipynb  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.docs/: README_template.rst  badges.rst  commandline_help.rst  contribute.rst  description.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  tested_under.rst  try_in_jupyter.rst  usage.rst
.github/workflows/: cicd_docker.yml  python-package.yml
lib_shopware6_api/: .gitignore  __init__.py  __init__conf__.py  lib_shopware6_api.py  lib_shopware6_api_cli.py  sub_currency.py  sub_delivery_time.py  sub_media.py  sub_product.py  sub_tax.py  sub_unit.py
src/lib_shopware6_api/: __init__.py  __init__conf__.py  _conf_helper.py  exit_codes.py  lib_shopware6_api.py  lib_shopware6_api_cli.py  logging_setup.py  sub_currency.py  sub_delivery_time.py  sub_media.py  sub_product.py  sub_tax.py  sub_unit.py
tests/: conftest.py  test_cli.py  test_doctests.py  test_integration.py  test_mock.py  test_pure.py
tests/local_testscripts/: lib_bash_functions.sh
